Comment about bracket name

--- a/_posts/2016-03-02-brackets.markdown
+++ b/_posts/2016-03-02-brackets.markdown
@@ -47,3 +47,6 @@ If you think you'd find some useful, and would like to try them out, here's the 
 What's more, we'd really like to see people making cool stuff with these, so if you buy a pack, make something neat, and publish the plans, we'll refund you the cost of the brackets.
 
 So who wants some free brackets? Email nick@arachnidlabs.com with your address, and we'll get you sorted out.
+
+Oh, and if you have an idea for a better name than "Arachnid Labs Angle Brackets", we need to talk too.
+
